# jp3_organiser

./: .gitignore  README.md  oc_context.md  package-lock.json
downloading_music/: how.md
jp3_organiser/: .gitignore  AGENTS.md  README.md  oc_context.md  package-lock.json  package.json  vite.config.js
jp3_organiser/src/: App.jsx  App.module.css  AppLayout.jsx  main.jsx
jp3_organiser/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
jp3_organiser/src-tauri/capabilities/: default.json
jp3_organiser/src-tauri/icons/: icon.icns
jp3_organiser/src-tauri/src/: lib.rs  main.rs
jp3_organiser/src-tauri/src/commands/: audio.rs  config.rs  cover_art.rs  library.rs  mod.rs  playlist.rs
jp3_organiser/src-tauri/src/models/: audio.rs  cover_art.rs  library.rs  mod.rs  playlist.rs
jp3_organiser/src-tauri/src/services/: cover_art_service.rs  fingerpint_service.rs  fingerprint_service.rs  metadata_ranking_service.rs  mod.rs  musicbrainz_service.rs
jp3_organiser/src-tauri/tests/: library_tests.rs  metadata_ranking_tests.rs
jp3_organiser/src/components/: index.js
jp3_organiser/src/components/ActionMenu/: ActionMenu.jsx  ActionMenu.module.css
jp3_organiser/src/components/ArtistCard/: ArtistCard.jsx  ArtistCard.module.css
jp3_organiser/src/components/ArtistGrid/: ArtistGrid.jsx  ArtistGrid.module.css  index.js
jp3_organiser/src/components/CardList/: CardList.jsx  CardList.module.css
jp3_organiser/src/components/ConfirmModal/: ConfirmModal.jsx  ConfirmModal.module.css
jp3_organiser/src/components/ContextMenu/: ContextMenu.jsx  ContextMenu.module.css
jp3_organiser/src/components/CoverArt/: CoverArt.jsx  CoverArt.module.css  index.js
jp3_organiser/src/components/ErrorState/: index.js  (+2 more)
jp3_organiser/src/hooks/: index.js  useAutoSuggest.js  useDebounce.js  useKeyboardShortcut.js  useLibrary.js  useLibraryConfig.js  useLibraryContext.jsx  useLibrarySearch.js  useMultiSelect.js  usePlayerContext.jsx  useRecents.js  useReviewActions.js  useReviewNavigation.js  useToast.js  useUploadCache.jsx  useUploadDisplayState.js  useUploadModeSelector.js  useUploadStageLogic.js  useWorkflowMachine.js
jp3_organiser/src/services/: audioService.js  coverArtNotFoundStore.js  coverArtService.js  index.js  libraryService.js  mbidStore.js  recentsService.js
jp3_organiser/src/styles/: global.css
jp3_organiser/src/utils/: enums.js  filenameSuggester.js  formatters.js  fuzzyMatch.js  global.module.css  index.js
planning/: how_will_sd_be_formatted.md  summary.md
planning/understanding/: how_oc_works.md  making_a_release.md  rust_commands.md
planning/understanding/song_validation/: Song Validation
(+175 files in other folders)
