[package]
name = "jp3_organiser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jp3_organiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-upload = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
# Audio metadata parsing
id3 = "1.14"
uuid = { version = "1", features = ["v4"] }
# For API and Audio Fingerprinting
symphonia = { version = "0.5", features = ["mp3", "wav"] }
chromaprint = "0.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.24.0"

